sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:6: error: Invalid literal number
    insertionSort(gap), comparing i-gap and i, then i-2gap and i-gap, then i-3gap and i-2gap, etc.
                                                      ^AlgShellSort:6: error: Invalid literal number
    insertionSort(gap), comparing i-gap and i, then i-2gap and i-gap, then i-3gap and i-2gap, etc.
                                                                             ^AlgShellSort:6: error: Invalid literal number
    insertionSort(gap), comparing i-gap and i, then i-2gap and i-gap, then i-3gap and i-2gap, etc.
                                                                                        ^AlgShellSort:5: error: '(' expected but identifier found.
  while gap>0:
        ^AlgShellSort:7: error: illegal start of simple expression
}
^